--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,9 +17,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  /* background-color: var(--blue); */
   color: #ffcb05;
-  /* border: 10px solid var(--yellow); */
   width: 100%;
 
 }
@@ -34,12 +32,11 @@ a:hover {
 }
 
 h1 {
-  /* font-size: 35px; */
   font-weight: 700 !important;
   text-align: center;
   background-color: inherit;
   color: white;
-  margin-top: 10px;
+  margin-top: 0.625rem;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 0.9px;
   border-bottom: 2px solid black;
@@ -48,44 +45,44 @@ h1 {
 
 h2 {
   margin: 0;
-  margin-top: -39px;
+  margin-top: -2.4375rem;
   color: white;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 0.9px;
   text-align: center;
-  font-size: 42px;
+  font-size: 2.625rem;
   font-weight: 800;
 }
 @media all and (max-width: 630px) {
   h2 {
-    font-size: 35px;
+    font-size: 2.1875rem;
   }
   h4 {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
 
 h4 {
-  font-size: 16px;
+  font-size: 1rem;
   text-align: left;
-  margin-left: 15px;
+  margin-left: 0.9375rem;
   color: var(--navy);
 }
 
 @media all and (max-width: 576px) {
   h1 {
-    margin-top: 18px;
+    margin-top: 1.125rem;
     font-weight: 500 !important;
-    font-size: 50px !important;
+    font-size: 3.125rem !important;
   }
   .header-powerbtn {
-    width: 35px !important;
-    height: 35px !important;
+    width: 2.1875rem !important;
+    height: 2.1875rem !important;
     margin-left: -4% !important;
   }
   .btn-pokemon {
     width: 30% !important;
-    font-size: 16px !important;
+    font-size: 1rem !important;
   }
 }
 
@@ -113,9 +110,9 @@ h4 {
 .close {
   position: absolute;
   width: auto;
-  height: 16px;
-  right: 20px;
-  top: 13px;
+  height: 1rem;
+  right: 1.25rem;
+  top: 0.8125rem;
   z-index: 4;
 }
 
@@ -143,23 +140,22 @@ h4 {
   background: url("../img/power-yellow.png");
   background-size: 100% 100%;
   transition: ease-in-out all .4s;
-  /* background-color: var(--mustard);
-  border-radius: 60px; */
 }
 
 .confirm-dialog {
   display: none;
   border-radius: 15px;
   border: 2px solid black;
-  top: 21%;
+  top: 50%;
+  position: absolute;
   width: 30%;
-  min-width: 200px;
+  min-width: 12.5rem;
   z-index: 3;
 }
 
 @media all and (max-width: 625px) {
   .confirm-dialog {
-    font-size: 15px;
+    font-size: 0.9375rem;
   }
 }
 
@@ -167,7 +163,7 @@ h4 {
   background-color: var(--yellow);
   color: var(--navy);
   border-radius: 10px;
-  margin: 10px;
+  margin: 0.625rem;
 }
 
 .confirm-dialog-button:hover {
@@ -187,9 +183,6 @@ h4 {
   z-index: 4000;
   animation-name: off;
   animation-duration: 0.3s;
-  
-  /* animation: off;
-  animation-timing-function: ease-in; */
 }
 
 @keyframes off {
@@ -313,11 +306,11 @@ h4 {
 
 .pokedex-window {
   position: relative;
-  max-width: 800px;
+  max-width: 50rem;
   width: 100%;
-  min-width: 300px;
-  height: 60%;
-  min-height: 150px;
+  min-width: 18.75rem;
+  height: 68%;
+  min-height: 9.375rem;
   background-color: #696666;
   margin-bottom: 5rem;
   padding: 1.5625rem;
@@ -334,7 +327,7 @@ h4 {
 
 label {
   margin: 0;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .controls {
@@ -352,28 +345,28 @@ label {
 
 .sort-btn {
   display: none;
-  margin-bottom: 8px;
-  height: 30px;
-  width: 60px;
-  font-size: 14px;
-  padding: 0px;
-  margin: 8px auto;
+  margin-bottom: 0.5rem;
+  height: 1.875rem;
+  width: 3.75rem;
+  font-size: 0.875rem;
+  padding: 0;
+  margin: 0.5rem auto;
 }
 
 .radio {
-  margin: 18px 4px 4px 22px;
+  margin: 1.125rem 0.25rem 0.25rem 1.375rem;
 }
 
 @media all and (max-width: 576px) {
   p {
-    font-size: 16px;
+    font-size: 1rem;
   }
   label {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   .radio {
-    margin: 6px 4px 4px 14px;
-    height: 11px;
+    margin: 0.375rem 0.25rem 0.25rem 0.875rem;
+    height: 0.6875rem;
   }
   .sort {
     display: none;
@@ -388,9 +381,9 @@ label {
 } */
 .pokedex-window-scrollbox {
   overflow: scroll;
-  max-width: 800px;
+  max-width: 50rem;
   width: 100%;
-  min-width: 250px;
+  min-width: 15.625rem;
   position: relative;
   height: 100%;
   margin: 0;
@@ -406,10 +399,10 @@ label {
   display: flex;
   font-size: 1.5rem;
   font-weight: 900;
-  max-width: 800px;
+  max-width: 50rem;
   border-radius: 15px;
   width: 95%;
-  min-width: 290px;
+  min-width: 18.125rem;
   height: 95%;
   margin: 0;
   background-color: #696666;
@@ -427,7 +420,7 @@ label {
 }
 
 header {
-  max-width: 400px;
+  max-width: 25rem;
   margin: 0 auto;
 }
 
@@ -449,9 +442,9 @@ ul {
 
 .pidgeot {
   position: absolute;
-  left: -50px;
-  top: -20px;
-  width: 30px;
+  left: -3.125rem;
+  top: -1.25rem;
+  width: 1.875rem;
   animation-name: flying;
   animation-duration: 5s;
 }
@@ -459,14 +452,14 @@ ul {
 @keyframes flying {
   0% {
     left: 30;
-    top: 100px;
-    width: 90px;
+    top: 6.25rem;
+    width: 5.625rem;
   }
   100% {
     display: none;
     left: 80%;
-    top: 0px;
-    width: 0px;
+    top: 0;
+    width: 0;
   }
 }
 
@@ -479,10 +472,10 @@ ul {
   color: black;
   border: 2px solid black;
   width: 80%;
-  min-width: 400px;
-  max-width: 600px;
+  min-width: 25rem;
+  max-width: 37.5rem;
   height: 90vh;
-  min-height: 300px;
+  min-height: 18.75rem;
   margin-top: 1.5625rem;
   padding-left: 2.8125rem;
   padding-right: 2.8125rem;
@@ -504,18 +497,16 @@ ul {
     left: 0;
     right: 0;
     text-align: center;
-    top: 2000px;
-    /* left: 50%; */
+    top: 125rem;
     }
   25% {
-    /* position: absolute; */
     position: absolute;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
     text-align: center;
-    top:800px;
+    top:50rem;
     transform: rotateX(100deg)
   }
   100% {
@@ -526,7 +517,7 @@ ul {
     left: 0;
     right: 0;
     text-align: center;
-    top:0px;
+    top:0;
     transform: rotateX(0deg)
   }
 }
@@ -556,20 +547,15 @@ ul {
   overflow-x: hidden;
 }
 
-/* .modal-open.modal {
-  top: -24px;
-} */
-
 .modal-body {
   position: relative !important;
   width: 100% !important;
   height: 100% !important;
-  /* top: 0 !important; */
 }
 
 .btn-lg {
   width: 35%;
-  min-width: 140px;
+  min-width: 8.75rem;
   text-align: center;
 }
 
